fix(calendar): white space calendar buttons

--- a/app-web/src/app/shared/components/calendar/calendar.component.scss
+++ b/app-web/src/app/shared/components/calendar/calendar.component.scss
@@ -146,8 +146,17 @@
 
     .fc-toolbar {
       flex-wrap: wrap;
-      gap: 0.5rem;
+      gap: 0.75rem;
       margin-bottom: var(--space-sm) !important;
+    }
+
+    .fc-toolbar-chunk {
+      display: flex;
+      gap: 0.75rem;
+      
+      .fc-button-group {
+        gap: 0.5rem;
+      }
     }
 
     .fc-toolbar-title {
